# track-reid

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-developer.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml  deploy_docs.yaml  release.yaml
custom_cost_selection/: index.html
docs/: custom_cost_selection.md  index.md  quickstart_dev.md  quickstart_user.md
docs/reference/: cost_functions.md  matcher.md  reid_processor.md  selection_functions.md  tracked_object.md  tracked_object_filter.md  tracked_object_metadata.md
examples/norfair/: norfair_starter_kit.ipynb  requirements.txt
examples/norfair/lib/norfair_helper/: utils.py  video.py
examples/trackreid/: requirements.txt  starter_kit_reid.ipynb  utils.py
lib/: sequence.py
lib/bbox/: utils.py
lib/norfair_helper/: utils.py  video.py
notebooks/: norfair_starter_kit.ipynb  starter_kit_reid.ipynb
quickstart_dev/: index.html
quickstart_user/: index.html
reference/cost_functions/: index.html
reference/matcher/: index.html
reference/reid_processor/: index.html
reference/selection_functions/: index.html
reference/tracked_object/: index.html
reference/tracked_object_filter/: index.html
reference/tracked_object_metadata/: index.html
search/: search_index.json
tests/assets/integration_tests/data/: tracker_output.txt
tests/assets/integration_tests/expected_outputs/: corrected_tracks.txt  tracked_object_1.json  tracked_object_2.json  tracked_object_3.json  tracked_object_4.json  tracked_object_5.json
tests/data/unit_tests/tracked_objects/: object_1.json  object_24.json  object_4.json
tests/unit_tests/: test_matcher.py  test_metadata.py  test_tracked_objects.py  test_utils.py
tests/utils/: file_utils.py
track_reid/: matcher.py  reid_processor.py  tracked_object.py  tracked_object_filter.py  tracked_object_metadata.py  utils.py
track_reid/args/: reid_args.py
track_reid/constants/: reid_constants.py
trackreid/: __init__.py  matcher.py  reid_processor.py  tracked_object.py  tracked_object_filter.py  tracked_object_metadata.py  utils.py
trackreid/args/: reid_args.py
trackreid/configs/: input_data_positions.py  output_data_positions.py  reid_constants.py
trackreid/cost_functions/: __init__.py  bounding_box_distance.py
trackreid/selection_functions/: __init__.py  select_by_category.py
